started working on revamp