@@ -86,9 +86,10 @@
                 </execution>
             </executions>
             <configuration>
-            <source>${java.version}</source>
-            <target>${java.version}</target>
-          </configuration>
+            <source>21</source>
+            <target>21</target>
+                <compilerArgs>--enable-preview</compilerArgs>
+            </configuration>
         </plugin>
     </plugins>
     <resources>
